--- a/installk_splits_ackpine_test/src/main/res/values/strings.xml
+++ b/installk_splits_ackpine_test/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">InstallKit</string>
+    <string name="error_no_base_apk">No base APK found</string>
+    <string name="error_conflicting_base_apk">More than one base APK found</string>
+    <string name="error_conflicting_split_name">Conflicting split name: %s</string>
+    <string name="error_conflicting_package_name">Conflicting package name. Expected: %1$s, found: %2$s, name: %3$s</string>
+    <string name="error_conflicting_version_code">Conflicting version code. Expected: %1$s, found: %2$s, name: %3$s</string>
+
+    <string name="session_error">Error</string>
+    <string name="session_error_with_reason">Error: %s</string>
 </resources>
